istio-manifests/Jaeger/IngressGateway.yaml
# gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: jaeger
  namespace: jaeger
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "jaeger.your-domain.com"
