istio-manifests/Jaeger/VirtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jaeger
  namespace: jaeger
spec:
  gateways:
    - jaeger
  hosts:
    - jaeger.your-domain.com
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: jaeger-query
            port:
              number: 16686
